add published state

--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -149,7 +149,7 @@ zh-CN:
   suspended: "被停权"  
   unsuspend: "复权"  
 
-  publiced: "已发布"
+  published: "已发布"
   pending: "待处理"
   audited: "已审核"
   no_encoding: "不需编码"
