add upload time

--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -115,6 +115,7 @@ zh-CN:
   welcome: "欢迎你"
   user: "用户"
   uploader: "上传者"
+  upload_time: "上传时间"
   login: "登陆"
   email: "电子邮件"
   register: "注册"
